add class section

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       </section>
 
       <!--Section_Features-->
-      <section class="features">
-        <div class="container features-container">
+      <section class="features section">
+        <div class="container">
           <h2 class="features-title">Features</h2>
           <ul class="features-list">
             <li class="features-item">
@@ -105,8 +105,8 @@
       </section>
 
       <!--Section_Team-->
-      <section class="team">
-        <div class="team-container container">
+      <section class="team section">
+        <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -154,8 +154,8 @@
       </section>
 
       <!--Section_Portfolio-->
-      <section class="portfolio">
-        <div class="container portfolio-container">
+      <section class="portfolio section">
+        <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
