--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!--Section_Features-->
       <section class="features section">
         <div class="container">
-          <h2 class="features-title">Features</h2>
+          <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-subtitle">Strategy</h3>
@@ -116,8 +116,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-card">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -126,8 +128,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-card">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -136,8 +140,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-card">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -146,8 +152,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitle">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-card">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
